--- a/src/assets/sass/website/components/home/hero-carousel.scss
+++ b/src/assets/sass/website/components/home/hero-carousel.scss
@@ -37,6 +37,7 @@
     font-size: 3rem;
     @include is-extra-small-mobile {
       font-size: 1.3rem;
+      padding-top: 20px;
     }
     @include is-mobile {
       font-size: 1.8rem;
@@ -59,6 +60,9 @@
     top: 170px;
     padding-left: 30px;
     text-align: left;
+    @include is-extra-small-mobile {
+      top: 80px;
+    }
   }
 }
 
@@ -123,5 +127,5 @@ $widths-and-heights: (
 
 // use /deep/ to apply scss classes to the child components
 div /deep/ {
-  @include filled-half-clipped-shape($widths-and-heights, rgba($primary, 0.7));
+  @include filled-half-clipped-shape($widths-and-heights, rgba($primary, 0.95));
 }
