--- a/src/assets/sass/website/mixins.scss
+++ b/src/assets/sass/website/mixins.scss
@@ -253,10 +253,9 @@
   }
 }
 
-@mixin generateTextAnimation($time, $delay, $offset, $i, $animation) {
+@mixin generateTextAnimation($time, $animation) {
   animation: $animation;
   animation-duration: $time;
-  animation-delay: $i * $delay + $offset;
   animation-timing-function: cubic-bezier(0.4, 0.3, 0.5, 1);
 }
 
