--- a/src/assets/sass/website/shared/half-clipped-button.scss
+++ b/src/assets/sass/website/shared/half-clipped-button.scss
@@ -2,38 +2,45 @@
 @import "../shared/half-clipped-shape.scss";
 
 // All have vw as divide operation units must be the same for all
-$width: 25vw;
+$width: 20vw;
 $height: 4vw;
 $clipped-length: $height / 2;
 
 $widths-and-heights: (
   clipped-shape-width: $width,
   clipped-shape-height: $height,
-  clipped-length: $clipped-length,
+  clipped-length: 0vw,
+  // clipped-length: $clipped-length,
   clipped-shape-width-xs: 55vw,
   clipped-shape-height-xs: (
     $height
   ) * 2,
-  clipped-length-xs: $height,
+  clipped-length-xs: 0vw,
+  // clipped-length-xs: $height,
   clipped-shape-width-sm: (
     $width + 5vw
   ) * 1.5,
   clipped-shape-height-sm: $height * 2,
-  clipped-length-sm: $height,
+  clipped-length-sm: 0vw,
+  // clipped-length-sm: $height,
   clipped-shape-width-md: $width + 5vw,
   clipped-shape-height-md: $height * 1.5,
-  clipped-length-md: $height * 1.5/2,
+  clipped-length-md: 0vw,
+  // clipped-length-md: $height * 1.5/2,
   clipped-shape-width-lg: $width + 5vw,
   clipped-shape-height-lg: $height,
-  clipped-length-lg: $height/2,
+  clipped-length-lg: 0vw,
+  // clipped-length-lg: $height/2,
   clipped-shape-width-xlg: $width + 5vw,
   clipped-shape-height-xlg: $height,
-  clipped-length-xlg: $height/2,
+  clipped-length-xlg: 0vw,
+  // clipped-length-xlg: $height/2,
   clipped-shape-width-xxlg: $width - 10vw,
   clipped-shape-height-xxlg: $height - 1vw,
-  clipped-length-xxlg: (
-    $height - 1vw
-  )/2
+  clipped-length-xxlg: 0vw
+  // clipped-length-xxlg: (
+  //   $height - 1vw
+  // )/2
 );
 
 // use /deep/ to apply scss classes to the child components
