--- a/src/assets/sass/website/components/home/sponsors-carousel.scss
+++ b/src/assets/sass/website/components/home/sponsors-carousel.scss
@@ -75,6 +75,7 @@ $total-padding: $half-clipped-shape-padding * 2;
     img {
       max-width: 100%;
       max-height: 100%;
+      padding: 10px;
     }
   }
 }
