--- a/src/assets/sass/website/components/home/hero-carousel.scss
+++ b/src/assets/sass/website/components/home/hero-carousel.scss
@@ -17,8 +17,17 @@
   @include is-desktop {
     margin-top: 300px;
   }
-  @media (max-width: 1600px) {
-    margin-top: 300px;
+  @media (min-width: 1300px) and (max-width: 1599px) and (min-height: 300px) and (max-height: 590px) {
+    margin-top: 80px;
+  }
+  @media (min-width: 1300px) and (max-width: 1599px) and (min-height: 600px) and (max-height: 850px) {
+    margin-top: 80px;
+  }
+  @media (min-width: 1600px) and (max-width: 1850px) and (min-height: 300px) and (max-height: 590px) {
+    margin-top: 120px;
+  }
+  @media (min-width: 1600px) and (max-width: 1850px) and (min-height: 600px) and (max-height: 850px) {
+    margin-top: 120px;
   }
   &__text {
     z-index: 10;
@@ -32,12 +41,12 @@
     width: 100%;
     text-align: left;
     margin: auto;
-    padding-top: 50px;
+    padding-top: 30px;
     padding-left: 30px;
     font-size: 3rem;
     @include is-extra-small-mobile {
       font-size: 1.3rem;
-      padding-top: 20px;
+      padding-top: 0px;
     }
     @include is-mobile {
       font-size: 1.8rem;
@@ -57,11 +66,13 @@
     width: 100%;
     margin: auto;
     position: absolute;
-    top: 170px;
+    top: 120px;
     padding-left: 30px;
     text-align: left;
     @include is-extra-small-mobile {
-      top: 80px;
+      top: 30px;
+      font-size: 0.8rem;
+      line-height: 20px;
     }
   }
 }
