--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -61,3 +61,10 @@ body {
   width: 100%;
   height: 50px;
 }
+
+.image-placeholder {
+  background-image: url("/images/placeholder.png");
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
