add user profile and route guard in dashboard

--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -18,3 +18,6 @@ $input-form-height: 50px;
 $half-clipped-shape-padding: 20px;
 
 $template-height: 660px;
+
+$hero-image-height: 248px;
+$half-page-hero-image-height: 60vh;
