--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -62,18 +62,19 @@ body > .navbar-collapse {
       align-items: center;
 
       .logo-img {
-        width: 40px;
+        width: 50px;
+        min-width: 50px;
+        height: 50px;
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        height: 40px;
         margin-left: 0px;
         margin-right: 10px;
         background: white;
-        border-radius: 40px;
+        border-radius: 50%;
 
         img {
-          max-width: 21px;
+          max-width: 25px;
         }
       }
     }
