--- a/src/assets/sass/website/shared/avatar.scss
+++ b/src/assets/sass/website/shared/avatar.scss
@@ -5,14 +5,14 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: $primary;
-  color: black;
+  background-color: $accent;
+  color: white;
   font-size: 22px;
   outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -5px;
+  z-index: 1000;
   &__navLinks {
     list-style: none;
     margin-bottom: 0;
@@ -26,7 +26,7 @@
       margin-bottom: 5px;
       a {
         transition: all 0.3s ease 0s;
-        color: black;
+        color: $accent;
         font-size: 1.2rem;
         font-weight: lighter;
       }
@@ -72,13 +72,14 @@
     position: absolute;
     padding: 10px 20px;
     margin-top: 5px;
-    right: 35px;
+    right: 15px;
     background-color: white !important;
     border: 1px solid rgba($color: #000000, $alpha: 0.1);
     border-radius: 5%;
     transition: all 0.2s ease;
     &--show {
       display: block;
+      z-index: 1000;
     }
     &--hide {
       display: none;
