finish profile logic

--- a/src/assets/sass/website/components/profile/change-password-modal.scss
+++ b/src/assets/sass/website/components/profile/change-password-modal.scss
@@ -17,8 +17,8 @@
 /* Modal Content */
 .change-password-modal-content {
   position: relative;
-  background-color: $placeholder-background;
-  border: 1px solid #1b90e2;
+  background-color: $primary;
+  border: 1px solid $accent;
   margin: auto;
   padding: 0;
   width: 500px;
@@ -62,8 +62,8 @@
   font-size: 20px;
   margin-top: 10px;
   cursor: pointer;
-  background-color: black;
-  border: 1px solid $primary;
+  background-color: $primary;
+  border: 1px solid $accent;
   width: 20px;
   text-align: center;
 }
@@ -77,42 +77,46 @@
 
 .change-password-modal-header {
   padding: 2px 16px;
-  color: white;
+  color: $accent;
   h2 {
     margin: 15px 0;
   }
 }
 
 .change-password-modal-body {
-  padding: 16px;
+  padding: 16px 16px 60px 16px;
+  position: relative;
   form {
-    height: 320px;
+    height: max-content;
     button {
-      color: $primary !important;
-      border: 1px solid $primary !important;
-      background-color: black !important;
+      color: $accent !important;
+      border: 1px solid $accent !important;
+      background-color: $primary !important;
+      position: absolute;
+      bottom: 16px;
+      right: 16px;
     }
   }
 }
 
 .form-group {
   label {
-    color: $primary !important;
+    color: $accent !important;
   }
   input {
-    color: $primary !important;
-    border: 1px solid $primary !important;
-    background-color: black !important;
+    color: $accent !important;
+    border: 1px solid $accent !important;
+    background-color: $primary !important;
     &:focus,
     &:-webkit-autofill,
     &:-webkit-autofill:hover,
     &:-webkit-autofill:focus {
-      color: $primary !important;
-      border: 1px solid $primary !important;
-      background-color: black !important;
+      color: $accent !important;
+      border: 1px solid $accent !important;
+      background-color: $primary !important;
     }
     &::placeholder {
-      color: $primary !important;
+      color: $accent !important;
       opacity: 0.7;
     }
   }
