--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -222,13 +222,17 @@ $carousel-height: 500px;
     &__content {
       position: absolute;
       top: 80px;
-      width: 100%;
+      width: 50%;
       height: 30%;
       font-size: 1.2rem;
       @include is-extra-small-mobile {
+        width: 100%;
         height: 80%;
         font-size: 1rem;
         left: 0;
+        * {
+          word-break: break-all;
+        }
       }
       @include is-mobile {
         font-size: 1.2rem;
