--- a/src/assets/sass/website/containers/work-details.scss
+++ b/src/assets/sass/website/containers/work-details.scss
@@ -17,6 +17,7 @@
   &__cover-container {
     width: 100%;
     max-height: 730px;
+    min-height: 30px;
     overflow: hidden;
     position: relative;
     width: 80%;
