--- a/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
+++ b/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
@@ -102,9 +102,13 @@
     height: 100%;
     video {
       height: 100%;
+      object-fit: cover;
       &:focus {
         outline: none;
       }
+    }
+    iframe {
+      min-height: 300px;
     }
   }
   &__slider {
