--- a/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
+++ b/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
@@ -122,7 +122,7 @@
     max-height: $template-height/1.25;
     overflow-y: auto;
     line-height: 40px;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     @include is-extra-small-mobile {
       font-size: 0.8rem;
       max-height: $template-height/2;
