--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -3,26 +3,34 @@
 @import "../mixins.scss";
 
 .header-wrapper {
+  position: relative;
   .row {
     margin-right: 0;
     margin-left: 0;
   }
   &__social-media {
     height: $header-height / 2;
-    background-color: $primary;
+    // background-color: $primary;
     padding: 8px;
     display: flex;
+    position: absolute;
+    width: 100%;
     &__logos {
+      width: 100%;
       cursor: pointer;
       width: fit-content;
+      z-index: 200;
       .fb-logo {
-        width: 12px;
+        width: 9px;
       }
       img {
-        margin: 10px 18px 10px 18px;
-        width: 20px;
+        margin: 10px 22px;
+        width: 16px;
       }
     }
+  }
+  &__avatar {
+    margin: 0 11px;
   }
   &__main {
     position: sticky;
