--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -16,6 +16,8 @@
     position: absolute;
     width: 100%;
     &__logos {
+      height: fit-content;
+      border-bottom: 1px solid $accent;
       width: 100%;
       cursor: pointer;
       width: fit-content;
@@ -24,8 +26,14 @@
         width: 9px;
       }
       img {
-        margin: 10px 22px;
+        margin: 10px 15px;
         width: 16px;
+        &:first-child {
+          margin-left: 5px;
+        }
+        &:last-child {
+          margin-right: 5px;
+        }
       }
     }
   }
