--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -46,10 +46,10 @@
     }
     @include is-desktop {
       position: relative;
-      height: 98%;
+      height: 100%;
     }
     @include is-large-desktop {
-      height: 98%;
+      height: 100%;
     }
     @include is-extra-large-desktop {
       height: 100%;
@@ -75,7 +75,7 @@
       width: 95vw;
       left: -23%;
       transform: scale(1.1);
-      height: 100%;
+      // height: 100%;
       filter: brightness(30%);
     }
     @include is-tablet {
@@ -83,20 +83,20 @@
       width: 95vw;
       left: -23%;
       transform: scale(1.1);
-      height: 100%;
+      // height: 100%;
       filter: brightness(30%);
     }
     @include is-desktop {
-      height: 97%;
+      // height: 97%;
     }
     @include is-large-desktop {
-      height: 98%;
+      // height: 98%;
     }
     @media (min-width: 1400px) and (max-width: 1599px) {
-      height: 98%;
+      // height: 100%;
     }
     @media (min-width: 1600px) {
-      height: 100%;
+      // height: 100%;
     }
   }
   &__work-img {
@@ -108,6 +108,7 @@
     top: 0;
     padding-right: 20px;
     @include is-extra-small-mobile {
+      padding-right: 0px;
       position: relative;
       width: 100vw;
       height: 100vh;
@@ -116,6 +117,7 @@
       filter: brightness(30%);
     }
     @include is-mobile {
+      padding-right: 0px;
       position: relative;
       width: 95vw;
       left: -23%;
@@ -124,24 +126,25 @@
       filter: brightness(30%);
     }
     @include is-tablet {
+      padding-right: 0px;
       position: relative;
       width: 95vw;
-      left: -23%;
+      left: 0;
       transform: scale(1.1);
-      height: 100%;
+      // height: 100%;
       filter: brightness(30%);
     }
     @include is-desktop {
-      height: 97%;
+      // height: 97%;
     }
     @include is-large-desktop {
-      height: 98%;
+      // height: 98%;
     }
     @media (min-width: 1400px) and (max-width: 1599px) {
-      height: 98%;
+      // height: 98%;
     }
     @media (min-width: 1600px) {
-      height: 100%;
+      // height: 100%;
     }
   }
   &__title {
@@ -259,15 +262,6 @@
   }
 }
 /deep/ .carousel-wrapper__slide {
-  padding-right: 40px;
-  @include is-extra-small-mobile {
-    padding-right: 0px;
-  }
-  @include is-mobile {
-    padding-right: 0px;
-  }
-}
-/deep/ .work-carousel-wrapper__slide {
   padding-left: 40px;
   @include is-extra-small-mobile {
     padding-left: 0px;
@@ -276,11 +270,36 @@
     padding-left: 0px;
   }
 }
+/deep/ .work-carousel-wrapper {
+  margin-top: 0;
+  min-height: auto;
+}
+/deep/ .work-carousel-wrapper__slide {
+  padding-right: 40px;
+  @include is-extra-small-mobile {
+    padding-right: 0px;
+  }
+  @include is-mobile {
+    padding-right: 0px;
+  }
+}
 /deep/ .work-carousel-navigation {
   position: absolute;
   right: 2%;
   margin-top: 25px;
   z-index: 120;
+  @include is-extra-small-mobile {
+    left: 1.5%;
+    right: unset;
+  }
+  @include is-mobile {
+    left: 1.5%;
+    right: unset;
+  }
+  @include is-tablet {
+    left: 1.5%;
+    right: unset;
+  }
   button {
     margin: 20px 20px 20px 10px;
     background-color: transparent;
