--- a/src/assets/sass/website/components/home/hero-carousel.scss
+++ b/src/assets/sass/website/components/home/hero-carousel.scss
@@ -22,7 +22,6 @@
     }
   }
   &__text {
-    z-index: 10;
     position: relative;
     height: 100%;
     width: 60%;
@@ -37,7 +36,7 @@
     }
   }
   &__media {
-    z-index: 10;
+    z-index: 1000;
     position: relative;
     height: 100%;
     width: 40%;
@@ -109,6 +108,7 @@
     top: 120px;
     padding-left: 30px;
     text-align: left;
+    z-index: 999;
     @include is-extra-small-mobile {
       top: 30px;
       font-size: 0.8rem;
@@ -120,10 +120,10 @@
     }
   }
   &__url {
-    width: 100%;
     margin: auto;
     position: absolute;
-    left: 0px;
+    left: 0;
+    bottom: 0;
     padding-left: 30px;
     text-align: left;
     text-decoration: none;
@@ -131,6 +131,7 @@
     font-size: 20px;
     display: flex;
     align-items: center;
+    z-index: 1001;
     @include is-extra-small-mobile {
       font-size: 16px;
       padding-left: 0px;
@@ -179,6 +180,7 @@
   bottom: 0%;
   width: 100%;
   margin: auto;
+  z-index: 1000;
 }
 @media (max-width: 600px) {
   .carousel-wrapper {
