--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -4,7 +4,7 @@
 
 .services-carousel {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 0;
   background-color: $primary;
   position: relative;
   .services-header {
