--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -6,4 +6,19 @@
   @include initializePageStyle;
   background-color: $primary;
   position: relative;
+  &__text {
+    text-align: center;
+    color: $header-item;
+    margin-top: 100px;
+  }
+  &__title {
+    font-family: "Segoe UI Bold";
+    font-size: 2.6rem;
+    letter-spacing: 4px;
+  }
+  &__content {
+    font-family: "Segoe UI";
+    font-size: 1.5rem;
+    margin-top: 30px;
+  }
 }
