--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -114,13 +114,16 @@ $transition-3: all 0.3s ease-in-out;
         color: $header-item;
         width: 110px;
         height: 85px;
-        margin: 10px;
-        background-color: $accent;
+        display: flex;
+        justify-content: left;
+        padding-left: 15px;
+        // margin: 10px;
+        // background-color: $accent;
         // clip-path: $clippath-botRight-leftTop;
         transition: $transition-5;
-        &:hover {
-          background-color: darken($accent, 30px);
-        }
+        // &:hover {
+        //   background-color: darken($accent, 30px);
+        // }
         @include is-extra-small-mobile {
           width: 85px;
           height: 65px;
