change cursor style

--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -37,6 +37,7 @@
   }
   .about-container {
     .half-filled-box {
+      cursor: auto;
       margin: 0;
       margin-bottom: 100px;
       @include is-large-desktop {
