--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -1,8 +1,7 @@
-$primary: #1c222a;
-$accent: #598cc2;
+$primary: rgb(21, 26, 32);
+$accent: rgba(89, 193, 177, 0.8);
 $placeholder-background: #598cc2;
 $dark-accent: #2c75c4;
-$dark-background: #151a20;
 $form-background: #222d3a;
 $header-item: white;
 $light-white: rgba(#fff, 0.2);
@@ -10,3 +9,6 @@ $underline-cyan: #59c0b2;
 $light-gray: #9f9f9f;
 $gray: #b8b8b8;
 $sub-text: #e6e6e6;
+
+$black-text: #151a20;
+$white-text: #ffffff;
