--- a/src/assets/sass/website/components/about/about-section-data.scss
+++ b/src/assets/sass/website/components/about/about-section-data.scss
@@ -6,7 +6,7 @@
   width: 5px;
 }
 ::-webkit-scrollbar-track {
-  background: $dark-background;
+  background: $primary;
 }
 ::-webkit-scrollbar-thumb {
   background-color: $accent;
