--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -3,18 +3,16 @@
 @import "../../shared/half-clipped-shape.scss";
 
 .services-carousel {
-  padding-top: 100px;
+  // padding-top: 100px;
   padding-bottom: 0;
-  background-color: $primary;
   position: relative;
   .services-header {
-    text-align: center;
-    padding-bottom: 50px;
+    margin: 50px 0 20px 20px;
     &__sub-text {
       color: $header-item;
     }
     &__title {
-      color: $header-item;
+      color: $black-text;
       font-family: "Segoe UI Bold";
       font-size: 2.6rem;
       letter-spacing: 4px;
@@ -154,7 +152,7 @@
     padding-top: 80px;
     font-size: 2rem;
     text-align: left;
-    color: $accent;
+    color: $white-text;
     margin-bottom: 0;
     text-transform: uppercase;
     z-index: 10;
@@ -180,7 +178,7 @@
     margin-top: 10px;
     position: absolute;
     top: 170px;
-    color: white;
+    color: $white-text;
     z-index: 10;
     padding-right: 10px;
     @include is-extra-small-mobile {
