--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -12,7 +12,7 @@
   width: 5px;
 }
 ::-webkit-scrollbar-track {
-  background: $dark-background;
+  background: $primary;
 }
 ::-webkit-scrollbar-thumb {
   background-color: $accent;
