--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -4,12 +4,13 @@
 
 .home-wrapper {
   @include initializePageStyle;
-  background-color: $primary;
+  background-color: $accent;
   position: relative;
   &__text {
     text-align: center;
-    color: $header-item;
-    margin-top: 100px;
+    color: $black-text;
+    margin: 100px auto 0;
+    width: 80%;
   }
   &__title {
     font-family: "Segoe UI Bold";
@@ -20,5 +21,11 @@
     font-family: "Segoe UI";
     font-size: 1.5rem;
     margin-top: 30px;
+  }
+  &__divider {
+    width: 20%;
+    height: 5px;
+    margin: 30px auto;
+    background-color: $black-text;
   }
 }
