--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -17,15 +17,14 @@ $transition-5: all 0.5s ease-in-out;
 $transition-3: all 0.3s ease-in-out;
 
 .footer-section {
-  background-color: $dark-background;
-  padding-top: 175px;
+  background-color: $primary;
+  padding-top: 50px;
   position: relative;
   &__container {
-    width: 80%;
     margin: auto;
-
     .footer-leftside {
-      padding-bottom: 20px;
+      padding: 20px 0 0 75px;
+      display: flex;
       p,
       p a {
         color: $light-gray !important;
@@ -43,6 +42,10 @@ $transition-3: all 0.3s ease-in-out;
       p a {
         margin-left: 5px;
       }
+      a img {
+        width: 120px;
+        margin-right: 50px;
+      }
       img {
         padding-right: 5px;
         margin-top: -3px;
@@ -59,7 +62,6 @@ $transition-3: all 0.3s ease-in-out;
     }
 
     .footer-social-media {
-      padding-bottom: 100px;
       .footer-followus {
         width: 108px;
         position: relative;
@@ -112,18 +114,16 @@ $transition-3: all 0.3s ease-in-out;
         align-items: center;
         cursor: pointer;
         color: $header-item;
-        width: 110px;
-        height: 85px;
         display: flex;
         justify-content: left;
-        padding-left: 15px;
-        // margin: 10px;
-        // background-color: $accent;
-        // clip-path: $clippath-botRight-leftTop;
+        padding-left: 20px;
         transition: $transition-5;
-        // &:hover {
-        //   background-color: darken($accent, 30px);
-        // }
+        img {
+          width: 30px;
+        }
+        img.fb-logo {
+          width: 15px;
+        }
         @include is-extra-small-mobile {
           width: 85px;
           height: 65px;
@@ -201,7 +201,7 @@ $transition-3: all 0.3s ease-in-out;
 
   .copyrights {
     color: $light-gray;
-    background-color: $primary;
+    background-color: $form-background;
     a {
       text-decoration: none;
       color: $accent;
