--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -2,6 +2,9 @@
 @import "../variables.scss";
 @import "../mixins.scss";
 
+$nav-width: 75%;
+$around-nav-width: calc(100% - #{$nav-width});
+
 .header-wrapper {
   position: relative;
   .row {
@@ -10,24 +13,21 @@
   }
   &__social-media {
     height: $header-height / 2;
-    // background-color: $primary;
     padding: 8px;
     display: flex;
-    position: absolute;
-    width: 100%;
+    width: $around-nav-width;
     &__logos {
       height: fit-content;
-      border-bottom: 1px solid $accent;
       width: 100%;
       cursor: pointer;
       width: fit-content;
       z-index: 200;
       .fb-logo {
-        width: 9px;
+        width: 12px;
       }
       img {
-        margin: 10px 15px;
-        width: 16px;
+        margin: 10px;
+        width: 20px;
         &:first-child {
           margin-left: 5px;
         }
@@ -49,7 +49,7 @@
     align-items: center;
     height: $header-height;
     z-index: 100;
-    background: rgba($color: $primary, $alpha: 0.7);
+    background: $primary;
     @include is-extra-small-mobile {
       height: $header-height-mobile;
     }
@@ -62,7 +62,7 @@
   }
   &--desktop {
     display: none;
-    width: 100%;
+    width: $nav-width;
     @include is-extra-large-desktop {
       display: block;
       margin-right: 20px;
@@ -80,16 +80,16 @@
     align-items: baseline;
     margin-right: auto;
     margin-left: 30px;
-    width: 300px;
+    width: $around-nav-width;
     @include is-extra-small-mobile {
       justify-content: start;
       width: fit-content;
       margin-left: 20px;
     }
     img {
-      width: 200px;
+      width: 20%;
       @include is-extra-small-mobile {
-        width: 135px;
+        width: 15%;
       }
     }
     p {
@@ -103,11 +103,12 @@
   &__navLinks {
     list-style: none;
     margin-bottom: 0;
-    text-align: right;
+    text-align: center;
+    padding-left: 0;
     li {
       display: inline-block;
       cursor: pointer;
-      margin: 0 60px;
+      margin: 0 3%;
       a {
         color: $header-item;
         position: relative;
