change services and work sliders in home

--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -2,7 +2,7 @@ $primary: rgb(21, 26, 32);
 $accent: rgba(89, 193, 177, 0.8);
 $placeholder-background: #598cc2;
 $dark-accent: #2c75c4;
-$form-background: #222d3a;
+$form-background: rgba(31, 110, 99, 0.6);
 $header-item: white;
 $light-white: rgba(#fff, 0.2);
 $underline-cyan: #59c0b2;
@@ -12,3 +12,4 @@ $sub-text: #e6e6e6;
 
 $black-text: #151a20;
 $white-text: #ffffff;
+$blue-stroke: #598cc2;
