--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -1,13 +1,19 @@
 @import "../../mixins.scss";
 @import "../../color-palette.scss";
+@import "../../variables.scss";
 @import "../../shared/half-clipped-shape.scss";
+
+$left: 25px;
+$shift: 80px;
+
+$extra-lg-dim: calc(#{$slide-height} + #{$shift});
 
 .services-carousel {
   // padding-top: 100px;
   padding-bottom: 0;
   position: relative;
   .services-header {
-    margin: 50px 0 20px 20px;
+    margin: 50px 0 20px 12%;
     &__sub-text {
       color: $header-item;
     }
@@ -26,6 +32,7 @@
     height: 100%;
   }
   &__img-wrapper {
+    text-align: right;
     @include is-extra-small-mobile {
       position: absolute;
       top: 0;
@@ -50,16 +57,17 @@
       height: 100%;
     }
     @include is-extra-large-desktop {
-      height: 100%;
+      margin-top: -$shift/2;
     }
   }
   &__img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
+    border-radius: 10px;
+    // position: absolute;
+    // right: 0;
+    // top: 0;
     @include is-extra-small-mobile {
       position: relative;
       width: 100vw;
@@ -89,6 +97,12 @@
     }
     @include is-large-desktop {
       // height: 98%;
+    }
+    @include is-extra-large-desktop {
+      height: $extra-lg-dim;
+      width: $extra-lg-dim;
+      max-width: $extra-lg-dim;
+      min-width: $extra-lg-dim;
     }
     @media (min-width: 1400px) and (max-width: 1599px) {
       // height: 100%;
@@ -146,10 +160,14 @@
     }
   }
   &__title {
-    width: 100%;
+    width: fit-content;
     font-family: "Segoe UI Bold";
     position: absolute;
-    padding-top: 80px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
     font-size: 2rem;
     text-align: left;
     color: $white-text;
@@ -170,14 +188,15 @@
     }
   }
   &__content {
-    width: 100%;
+    width: calc(100% - #{$left});
     text-align: left;
     font-family: "Segoe UI";
     font-size: 1.2rem;
-    line-height: 35px;
+    // line-height: 35px;
     margin-top: 10px;
     position: absolute;
-    top: 170px;
+    top: 60px;
+    left: $left;
     color: $white-text;
     z-index: 10;
     padding-right: 10px;
@@ -204,10 +223,17 @@
   }
   &__btn {
     position: absolute;
-    bottom: 10%;
-    left: 50%;
+    bottom: 10px;
+    right: 20px;
     cursor: pointer;
     z-index: 100;
+    color: $black-text;
+    background-color: $white-text;
+    padding: 8px 20px;
+    border-radius: 5px;
+    border: 1px $blue-stroke solid;
+    outline: none;
+    box-shadow: 0 0 10px $blue-stroke;
     @include is-extra-small-mobile {
       bottom: 0;
     }
@@ -236,38 +262,38 @@
   display: none;
 }
 /deep/ .half-filled-box {
-  min-height: 555px;
+  // min-height: 555px;
 }
 
 @media (max-width: 1600px) {
   /deep/ .half-filled-box {
-    min-height: 675px;
+    // min-height: 675px;
   }
 }
 @media (max-width: 1100px) {
   /deep/ .half-filled-box {
-    min-height: 820px;
+    // min-height: 820px;
   }
 }
 @media (max-width: 767px) {
   /deep/ .half-filled-box {
-    min-height: 993px;
+    // min-height: 993px;
   }
 }
 @media (max-width: 600px) {
   /deep/ .half-filled-box {
-    min-height: 90vh;
+    // min-height: 90vh;
   }
 }
-/deep/ .carousel-wrapper__slide {
-  padding-left: 40px;
-  @include is-extra-small-mobile {
-    padding-left: 0px;
-  }
-  @include is-mobile {
-    padding-left: 0px;
-  }
-}
+// /deep/ .carousel-wrapper__slide {
+//   padding-left: 40px;
+//   @include is-extra-small-mobile {
+//     padding-left: 0px;
+//   }
+//   @include is-mobile {
+//     padding-left: 0px;
+//   }
+// }
 /deep/ .work-carousel-wrapper {
   margin-top: 0;
   min-height: auto;
@@ -310,9 +336,9 @@
 }
 /deep/ .carousel-navigation {
   position: absolute;
-  left: 1.5%;
-  margin-top: 25px;
+  left: 1%;
   z-index: 120;
+  width: 65%;
   button {
     margin: 20px 20px 20px 10px;
     background-color: transparent;
@@ -320,6 +346,12 @@
     outline: none;
     img {
       width: 85%;
+    }
+    &:nth-child(1) {
+      float: left;
+    }
+    &:nth-child(2) {
+      float: right;
     }
   }
 }
@@ -333,41 +365,32 @@
   }
 }
 // All have vw as divide operation units must be the same for all
-$width: 85vw;
-$height: 20vw;
-$clipped-length: 0vw;
-// $clipped-length: 4vw;
+$width: 80%;
+$height: $slide-height;
 
 $widths-and-heights: (
   clipped-shape-width: $width,
   clipped-shape-height: $height,
-  clipped-length: $clipped-length * 0,
   clipped-shape-width-xs: (
-    $width + 10vw
+    $width
   ),
   clipped-shape-height-xs: (
-    $height + 10vw
-  ) * 2,
-  clipped-length-xs: $clipped-length * 0,
+    $height
+  ),
   clipped-shape-width-sm: (
-    $width + 10vw
+    $width
   ),
   clipped-shape-height-sm: (
-    $height + 5vw
+    $height
   ),
-  clipped-length-sm: $clipped-length * 0,
-  clipped-shape-width-md: $width + 10vw,
-  clipped-shape-height-md: $height * 2,
-  clipped-length-md: $clipped-length,
-  clipped-shape-width-lg: $width + 10vw,
-  clipped-shape-height-lg: $height + 30vw,
-  clipped-length-lg: $clipped-length,
-  clipped-shape-width-xlg: $width + 5vw,
-  clipped-shape-height-xlg: $height + 30vw,
-  clipped-length-xlg: $clipped-length,
+  clipped-shape-width-md: $width,
+  clipped-shape-height-md: $height,
+  clipped-shape-width-lg: $width,
+  clipped-shape-height-lg: $height,
+  clipped-shape-width-xlg: $width,
+  clipped-shape-height-xlg: $height,
   clipped-shape-width-xxlg: $width,
-  clipped-shape-height-xxlg: $height + 10vw,
-  clipped-length-xxlg: $clipped-length
+  clipped-shape-height-xxlg: $height
 );
 
 // use /deep/ to apply scss classes to the child components
