--- a/src/assets/sass/website/shared/half-clipped-shape.scss
+++ b/src/assets/sass/website/shared/half-clipped-shape.scss
@@ -9,25 +9,26 @@
     height: map-get($widths-and-heights, clipped-shape-height);
     background-color: $bg-color;
     color: $header-item;
-    padding: $half-clipped-shape-padding;
+    // padding: $half-clipped-shape-padding;
     text-align: center;
     margin: auto;
-    @include half-clipped-shape(
-      $width,
-      $height,
-      map-get($widths-and-heights, clipped-length)
-    );
+    border-radius: 10px;
+    // @include half-clipped-shape(
+    //   $width,
+    //   $height,
+    //   map-get($widths-and-heights, clipped-length)
+    // );
 
     @include is-extra-small-mobile {
       $width: map-get($widths-and-heights, clipped-shape-width-xs);
       $height: map-get($widths-and-heights, clipped-shape-height-xs);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-xs)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-xs)
+      // );
     }
 
     @include is-mobile {
@@ -35,11 +36,11 @@
       $height: map-get($widths-and-heights, clipped-shape-height-sm);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-sm)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-sm)
+      // );
     }
 
     @include is-tablet {
@@ -47,11 +48,11 @@
       $height: map-get($widths-and-heights, clipped-shape-height-md);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-md)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-md)
+      // );
     }
 
     @include is-desktop {
@@ -59,33 +60,33 @@
       $height: map-get($widths-and-heights, clipped-shape-height-lg);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-lg)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-lg)
+      // );
     }
     @include is-large-desktop {
       $width: map-get($widths-and-heights, clipped-shape-width-xlg);
       $height: map-get($widths-and-heights, clipped-shape-height-xlg);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-xlg)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-xlg)
+      // );
     }
     @include is-extra-large-desktop {
       $width: map-get($widths-and-heights, clipped-shape-width-xxlg);
       $height: map-get($widths-and-heights, clipped-shape-height-xxlg);
       width: $width;
       height: $height;
-      @include half-clipped-shape(
-        $width,
-        $height,
-        map-get($widths-and-heights, clipped-length-xxlg)
-      );
+      // @include half-clipped-shape(
+      //   $width,
+      //   $height,
+      //   map-get($widths-and-heights, clipped-length-xxlg)
+      // );
     }
     &--is-button {
       cursor: pointer;
