change clients ui

--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -70,3 +70,14 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+.slick-list,
+.slick-track {
+  height: 100% !important;
+}
+
+.slick-slide {
+  div {
+    height: 100% !important;
+  }
+}
