--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -201,7 +201,7 @@ $transition-3: all 0.3s ease-in-out;
 
   .copyrights {
     color: $light-gray;
-    background-color: $form-background;
+    background-color: $primary;
     a {
       text-decoration: none;
       color: $accent;
