--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -9,23 +9,24 @@
   &__text {
     text-align: center;
     color: $black-text;
-    margin: 100px auto 0;
+    margin: 10px auto 0;
     width: 80%;
   }
   &__title {
     font-family: "Segoe UI Bold";
     font-size: 2.6rem;
     letter-spacing: 4px;
+    margin-top: 0;
   }
   &__content {
     font-family: "Segoe UI";
     font-size: 1.5rem;
-    margin-top: 30px;
+    margin-top: 10px;
   }
   &__divider {
     width: 20%;
     height: 5px;
-    margin: 30px auto;
+    margin: 20px auto;
     background-color: $black-text;
   }
 }
