change style to be consistent with design

--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -1,6 +1,6 @@
 /*           Font Smoothing      */
 body {
-  font-family: "Segoe UI";
+  font-family: Arial;
 }
 body,
 h1,
@@ -204,7 +204,7 @@ span {
 .pell-content > p > *,
 .pell-content > span > *,
 .pell-content > div > * {
-  font-family: "Segoe UI" !important;
+  font-family: Arial !important;
 }
 .pell-content > p > * {
   color: black !important;
