--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -2,7 +2,7 @@
 
 html,
 body {
-  font-family: "Segoe UI";
+  font-family: Arial;
   overflow-x: hidden;
   background-color: $primary !important;
 }
