--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -2,7 +2,7 @@ $primary: rgb(21, 26, 32);
 $accent: rgba(89, 193, 177, 0.8);
 $placeholder-background: #598cc2;
 $dark-accent: #2c75c4;
-$form-background: rgba(31, 110, 99, 0.6);
+$form-background: rgba(31, 65, 60,0.8);
 $header-item: white;
 $light-white: rgba(#fff, 0.2);
 $underline-cyan: #59c0b2;
