--- a/src/assets/sass/website/components/about/about-clients.scss
+++ b/src/assets/sass/website/components/about/about-clients.scss
@@ -18,7 +18,8 @@
         margin: 100px 0 100px 0;
       }
       h1{
-        font-family: "Segoe UI Bold";
+        font-family: Arial;
+    font-weight: bold;
         @include is-mobile {
           font-size: 2rem;
         }
