--- a/src/assets/sass/website/components/about/about-section-data.scss
+++ b/src/assets/sass/website/components/about/about-section-data.scss
@@ -50,7 +50,8 @@ $text-minheight-pc: 706px;
       h1 {
         color: $header-item;
         font-size: 2.3rem;
-        font-family: "Segoe UI Bold";
+        font-family: Arial;
+    font-weight: bold;
         @include is-large-desktop {
           font-size: 2rem;
         }
