--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -33,7 +33,8 @@ $carousel-height: 500px;
     }
     &__title {
       color: $header-item;
-      font-family: "Segoe UI Bold";
+      font-family: Arial;
+    font-weight: bold;
       font-size: 2.6rem;
       letter-spacing: 4px;
     }
@@ -178,7 +179,8 @@ $carousel-height: 500px;
       }
     }
     &__title {
-      font-family: "Segoe UI Bold";
+      font-family: Arial;
+    font-weight: bold;
       font-size: 2.4rem;
       height: max-content;
       width: 60%;
