--- a/src/assets/sass/website/components/work/work-main-page.scss
+++ b/src/assets/sass/website/components/work/work-main-page.scss
@@ -92,7 +92,8 @@
     opacity: 0;
     transition: all 0.5s ease-in-out;
     h2 {
-      font-family: "Segoe UI Bold";
+      font-family: Arial;
+    font-weight: bold;
       font-size: 1.8rem;
     }
   }
