--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -4,8 +4,21 @@
 
 .home-wrapper {
   @include initializePageStyle;
-  background-color: $accent;
   position: relative;
+  &__bg {
+    width: 69.8%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: 100;
+    padding-top: $header-height;
+  }
+  &__bg-color {
+    position: relative;
+    background-color: $accent;
+    z-index: 102;
+  }
   &__text {
     text-align: center;
     color: $black-text;
@@ -13,14 +26,15 @@
     width: 80%;
   }
   &__title {
-    font-family: "Segoe UI Bold";
-    font-size: 2.6rem;
+    font-family: "Arial Bold";
+    font-weight: bold;
+    font-size: 2rem;
     letter-spacing: 4px;
     margin-top: 0;
   }
   &__content {
-    font-family: "Segoe UI";
-    font-size: 1.5rem;
+    font-family: Arial;
+    font-size: 1.2rem;
     margin-top: 10px;
   }
   &__divider {
