--- a/src/assets/sass/website/containers/services.scss
+++ b/src/assets/sass/website/containers/services.scss
@@ -64,7 +64,8 @@
         color: $header-item;
         user-select: none;
         font-size: 2.5rem;
-        font-family: "Segoe UI Bold";
+        font-family: Arial;
+    font-weight: bold;
         @include max-width-1650 {
           font-size: 2rem;
         }
