--- a/src/assets/sass/website/containers/work-details.scss
+++ b/src/assets/sass/website/containers/work-details.scss
@@ -38,7 +38,8 @@
       }
     }
     &__title {
-      font-family: "Segoe UI Bold";
+      font-family: Arial;
+    font-weight: bold;
       position: absolute;
       width: 80%;
       margin: auto;
@@ -108,7 +109,8 @@
       }
     }
     div {
-      font-family: "Segoe UI Bold";
+      font-family: Arial;
+    font-weight: bold;
       position: relative;
       text-align: center;
       padding: 0 35px;
