--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -18,8 +18,9 @@ $transition-3: all 0.3s ease-in-out;
 
 .footer-section {
   background-color: $primary;
-  padding-top: 50px;
+  padding-top: 20px;
   position: relative;
+  z-index: 101;
   &__container {
     margin: auto;
     .footer-leftside {
@@ -66,8 +67,9 @@ $transition-3: all 0.3s ease-in-out;
         width: 108px;
         position: relative;
         color: $header-item;
-        padding-bottom: 25px;
-        font-family: "Segoe UI Bold";
+        padding-bottom: 20px;
+        font-family: Arial;
+        font-weight: bold;
         font-size: 20px;
         &::after {
           content: "";
@@ -119,10 +121,10 @@ $transition-3: all 0.3s ease-in-out;
         padding-left: 20px;
         transition: $transition-5;
         img {
-          width: 30px;
+          width: 20px;
         }
         img.fb-logo {
-          width: 15px;
+          width: 10px;
         }
         @include is-extra-small-mobile {
           width: 85px;
@@ -159,11 +161,12 @@ $transition-3: all 0.3s ease-in-out;
           width: 50%;
         }
         .nav-link {
-          font-family: "Segoe UI Bold";
+          font-family: Arial;
+          font-weight: bold;
         }
       }
       li {
-        margin: 40px;
+        margin: 20px;
         position: relative;
         @include is-extra-small-mobile {
           margin: 15px;
@@ -177,7 +180,7 @@ $transition-3: all 0.3s ease-in-out;
       }
       a {
         color: $header-item;
-        font-size: $fontsize-paragraph;
+        font-size: 1rem;
         &:hover {
           color: $header-item;
         }
@@ -213,8 +216,7 @@ $transition-3: all 0.3s ease-in-out;
     h5 {
       line-height: 60px;
       margin-bottom: 0;
-      width: 80%;
-      margin: auto;
+      padding-left: 30px;
       @include is-extra-small-mobile {
         font-size: 0.7rem;
       }
