--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -7,6 +7,7 @@ $around-nav-width: calc(100% - #{$nav-width});
 
 .header-wrapper {
   position: relative;
+  z-index: 1000;
   .row {
     margin-right: 0;
     margin-left: 0;
@@ -87,7 +88,7 @@ $around-nav-width: calc(100% - #{$nav-width});
       margin-left: 20px;
     }
     img {
-      width: 20%;
+      width: 18%;
       @include is-extra-small-mobile {
         width: 15%;
       }
@@ -159,7 +160,7 @@ $around-nav-width: calc(100% - #{$nav-width});
     }
     &--active {
       font-size: $header-active-item-font;
-      font-weight: bold;
+  font-weight: bold;
       &::before {
         @include is-extra-small-mobile {
           @include header-item-hover-effect(
