--- a/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
+++ b/src/assets/sass/website/shared/work-service-sections/work-details-section.scss
@@ -32,7 +32,8 @@
   &__title {
     position: relative;
     color: $accent;
-    font-family: "Segoe UI Bold";
+    font-family: Arial;
+    font-weight: bold;
     text-align: left;
     font-size: 2.3rem;
     height: 65px;
@@ -80,7 +81,8 @@
   &__title-normal {
     position: relative;
     color: $accent;
-    font-family: "Segoe UI Bold";
+    font-family: Arial;
+    font-weight: bold;
     text-align: center;
     font-size: 2.3rem;
     height: 65px;
