fix styles for main page for services

--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -13,6 +13,9 @@
     position: fixed;
     z-index: 100;
     padding-top: $header-height;
+    @include is-extra-small-mobile {
+      width: 68.8%;
+    }
   }
   &__bg-color {
     position: relative;
