--- a/src/assets/sass/website/components/services/services-main-page.scss
+++ b/src/assets/sass/website/components/services/services-main-page.scss
@@ -5,17 +5,13 @@
 .services-page-wrapper {
   width: 100%;
   margin: auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
   user-select: none;
+  padding: 15px 0 100px 15px;
   position: relative;
   background-color: $accent;
   z-index: 102;
-  @include is-extra-small-mobile {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
   &__content-wrapper {
+    padding-right: 15px !important;
     a div img {
       width: 100%;
     }
@@ -33,7 +29,7 @@
   &__content {
     position: relative;
     color: $header-item;
-    margin: 10px 0;
+    margin-bottom: 10px;
     // @media (min-width: 2000px) {
     //   width: 490px;
     //   height: 490px;
